--- a/tarea_4_plantilla.ipynb
+++ b/tarea_4_plantilla.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Calificación: 14**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Curso:          Fundamentos de Programación en Python para Macroeconomía y Finanzas     \n",
     "Profesor:       Victor Fuentes Campos     "
    ]
@@ -131,6 +138,13 @@
     "plt.ylabel('Variación % del PBI')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Buena!"
    ]
   },
   {
@@ -594,6 +608,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Buena manera de resolverlo, pero se pedía trabajar con el promedio móvil 12 meses y lograr tanto eliminar problemas estacionalidad como suavizar la evolución. **Calificación: -0.5**\n",
+    "- No hay conclusiones. **Calificación: -0.5**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The winners"
    ]
   },
@@ -634,6 +656,14 @@
    "outputs": [],
    "source": [
     "# Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- :(\n",
+    "- **Calificación: -5**"
    ]
   }
  ],
